# Dockmeister

./: Dockerfile  docker-compose.yml  pyproject.toml  run.sh  rw.sh
data/: Dockmeister.db
src/dockmeister/: __main__.py  app.py  db.py  dockmeister.tcss  theme.py
src/dockmeister/models/: __init__.py  container.py  stack.py
src/dockmeister/screens/: confirm.py  help.py  history.py  main.py
src/dockmeister/services/: compose_service.py  discovery_service.py  docker_service.py  history_service.py  stats_service.py  update_checker.py
src/dockmeister/widgets/: detail_panel.py  editor.py  log_viewer.py  prune.py  shell.py  stack_list.py
